fix: overflow removed for last column in profile header

--- a/src/components/profile/profile.styles.scss
+++ b/src/components/profile/profile.styles.scss
@@ -64,6 +64,7 @@ $profile-footer-justify-content: center !default;
 		align-items: center;
 		padding: $grid-base-three $grid-base-two;
 		z-index: 20;
+		overflow: hidden;
 
 		@include breakpoint($fromMedium) {
 			padding: $grid-base-three;
