--- a/src/resources/styles/_layout.scss
+++ b/src/resources/styles/_layout.scss
@@ -2,8 +2,6 @@ html,
 body {
 	height: 100%;
 	min-width: $body-min-width;
-	max-width: 100%;
-	overflow-x: hidden;
 }
 
 html {
